Sonar qube fixes.